; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/extr_socket.c_sock_recvmsg_nosec.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/extr_socket.c_sock_recvmsg_nosec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket = type { i32 }
%struct.msghdr = type { i32 }
%struct.kiocb = type { %struct.sock_iocb* }
%struct.sock_iocb = type { i32 }

@EIOCBQUEUED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket*, %struct.msghdr*, i64, i32)* @sock_recvmsg_nosec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sock_recvmsg_nosec(%struct.socket* %0, %struct.msghdr* %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.socket*, align 8
  %6 = alloca %struct.msghdr*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.kiocb, align 8
  %10 = alloca %struct.sock_iocb, align 4
  %11 = alloca i32, align 4
  store %struct.socket* %0, %struct.socket** %5, align 8
  store %struct.msghdr* %1, %struct.msghdr** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = call i32 @init_sync_kiocb(%struct.kiocb* %9, i32* null)
  %13 = getelementptr inbounds %struct.kiocb, %struct.kiocb* %9, i32 0, i32 0
  store %struct.sock_iocb* %10, %struct.sock_iocb** %13, align 8
  %14 = load %struct.socket*, %struct.socket** %5, align 8
  %15 = load %struct.msghdr*, %struct.msghdr** %6, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @__sock_recvmsg_nosec(%struct.kiocb* %9, %struct.socket* %14, %struct.msghdr* %15, i64 %16, i32 %17)
  store i32 %18, i32* %11, align 4
  %19 = load i32, i32* @EIOCBQUEUED, align 4
  %20 = sub nsw i32 0, %19
  %21 = load i32, i32* %11, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = call i32 @wait_on_sync_kiocb(%struct.kiocb* %9)
  store i32 %24, i32* %11, align 4
  br label %25

25:                                               ; preds = %23, %4
  %26 = load i32, i32* %11, align 4
  ret i32 %26
}

declare dso_local i32 @init_sync_kiocb(%struct.kiocb*, i32*) #1

declare dso_local i32 @__sock_recvmsg_nosec(%struct.kiocb*, %struct.socket*, %struct.msghdr*, i64, i32) #1

declare dso_local i32 @wait_on_sync_kiocb(%struct.kiocb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
